# ArmMovement

./: .gitignore  README.md  pyproject.toml
app/: arm_movement.py  arm_parts.py  exceptions.py  interfaces.py  logger.py  main.py
test/: test_arm_movement.py  test_arm_parts.py  test_responsiveness.py
