[tool.poetry]
name = "robot"
version = "0.1.0"
description = ""
authors = ["AnnaShcherenko <102581692+AnnaShcherenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
termcolor = "^2.4.0"
black = "^24.4.2"
pylint = "^3.1.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
